# Anti-Freelancer

./: .gitignore  README.md  config.docker.env  docker-compose.yml
docker/configs_example/: config.auth.env  (+5 more)
services/auth/: Dockerfile  README.md  alembic.ini  config.example.env  config.py  createsuperuser.py  crud.py  db.py  logger.yml  main.py  pyproject.toml  send_email.py  tasks.py
services/auth/app/: crud.py  models.py  requests.py  routers.py  schemas.py  security.py  send_email.py  service.py  tokens.py  views.py
services/auth/app/admin/: routers.py  schemas.py  views.py
services/auth/app/auth/: routers.py  schemas.py  views.py
services/auth/app/payments/: routers.py  schemas.py  views.py
services/auth/app/skills/: routers.py  schemas.py  views.py
services/auth/docker/postgres/: init.sql
services/auth/emails/: register.html
services/auth/migrations/: env.py
services/auth/migrations/versions/: 09ff062ecd40_.py  233801609c11_.py  6044b9b97e7d_.py  74d21af7daa7_.py  aebf769b3868_.py  b0171a933b6b_.py  b044c0c38e08_.py  b8bd62fe7e62_.py  d3dcf156b81a_.py  e7676da21d07_.py  e7f745c0fcf1_.py
services/auth/tests/: __init__.py  admin_test.py  auth_test.py  createsuperuser_test.py  payments_test.py  skill_test.py  skills.xls
services/email/: Dockerfile  README.md  alembic.ini  config.example.env  config.py  main.py  pyproject.toml  schemas.py  tasks.py  views.py
services/email/app/: crud.py  models.py
services/email/app/client/: routers.py  schemas.py  views.py
services/email/app/mail/: routers.py  schemas.py  views.py
services/email/docker/postgres/: init.sql
services/email/migrations/: env.py
services/email/migrations/versions/: 40213f0c4f78_.py  9ba50bbaad60_.py
services/email/templates/: notification.html  register.html  reset_password.html  select.html  username.html
services/email/tests/: __init__.py  client_test.py  email_test.py
services/main/: Dockerfile  README.md  alembic.ini  config.example.env  config.py  crud.py  db.py  main.py  pyproject.toml  send_email.py
services/main/app/: crud.py  models.py  permission.py  requests.py  schemas.py  send_email.py  service.py
services/main/app/categories/: routers.py  schemas.py  views.py
services/main/app/jobs/: routers.py  schemas.py  views.py
services/main/docker/postgres/: init.sql
services/main/migrations/: env.py
services/main/migrations/versions/: 34db41782586_.py  5865c719dc6d_.py  8c7a2c5fb212_.py  ab0c00a3b28b_.py  b6cc9f315de8_.py  c4d5652a6dce_.py
services/main/tests/: __init__.py  categories_test.py  jobs_test.py
services/messenger/: Dockerfile  README.md  alembic.ini  config.example.env  config.py  db.py  main.py  pyproject.toml
services/messenger/app/: crud.py  models.py  permission.py  requests.py  schemas.py  send_email.py  service.py
services/messenger/app/dialogue/: routers.py  schemas.py  views.py
services/messenger/app/dialogues/: routers.py  schemas.py  views.py
services/messenger/app/message/: middleware.py  routers.py  schemas.py  service.py  state.py  views.py
services/messenger/app/notification/: routers.py  schemas.py  views.py
services/messenger/docker/postgres/: init.sql
services/messenger/migrations/: env.py
services/messenger/migrations/versions/: 0bbec5b21290_.py  10c309bce6e7_.py  14e8314a9ba8_.py  24aa67cb1fde_.py  35087f2f8e08_.py  3a0e96c0698b_.py  3b06d1ab4b15_.py  4d1b3f2f4f11_.py  59b8a3bcded5_.py  59ff2c00def1_.py  5e26f8c785d1_.py  8b1e5ffffb33_.py  e7a0ff03a68f_.py  f457499b00de_.py
services/messenger/tests/: __init__.py  delete_message.html  delete_message_test.py  dialogue_test.py  dialogues_test.py  get_messages_test.py  message_test.py  notification_test.py  send_message.html  send_message_test.py  update_message.html  update_message_test.py
services/messenger/tests/manual_tests/: delete_message.html  send_message.html  update_message.html
services/other/: Dockerfile  README.md  alembic.ini  config.example.env  config.py  main.py  pyproject.toml
services/other/app/: crud.py  models.py  requests.py  schemas.py  service.py
services/other/app/feedback/: routers.py  schemas.py  views.py
services/other/app/review/: routers.py  schemas.py  views.py
services/other/docker/postgres/: init.sql
services/other/migrations/: env.py
services/other/tests/: __init__.py  feedback_test.py  review_test.py
(+3 files in other folders)
