[tool.poetry]
name = "Auth"
version = "0.1.0"
description = ""
authors = ["_Counter021_"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.68.1"}
psycopg2-binary = "^2.9.1"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.25"}
asyncpg = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
