[tool.poetry]
name = "Auth Service Anti-Freelancer"
version = "0.1.0"
description = ""
authors = ["_Counter021_"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.68.1"}
psycopg2-binary = "^2.9.1"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.25"}
asyncpg = "^0.24.0"
alembic = "^1.7.3"
bcrypt = "^3.2.0"
passlib = "^1.7.4"
PyJWT = "^2.1.0"
httpx = "^0.19.0"
Authlib = "^0.15.4"
pyotp = "^2.6.0"
qrcode = "^7.3.1"
Pillow = "^8.3.2"
pandas = "^1.3.3"
xlrd = "^2.0.1"
celery = "^5.1.2"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
