[tool.poetry]
name = "Messenger Service Anti-Freelancer"
version = "0.2.0"
description = ""
authors = ["_Counter021_"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.25"}
fastapi = {version = "0.68.1", extras = ["all"]}
psycopg2-binary = "^2.9.1"
asyncpg = "^0.24.0"
alembic = "^1.7.4"
aiohttp = "^3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
